feat: add interaktiv

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -13,12 +13,14 @@
         <div class="container">
             <div class="header__inner">
                 <div class="logo">
-                    <h1 class="title logo__title">PetStory <br> online</h1>
+                    <a href="./index.html">
+                        <h1 class="title logo__title">PetStory <br> online</h1>
+                    </a>
                 </div>
                 <nav class="navigation">
                     <ul class="navigation__list">
                         <li class="navigation__item">
-                            <a href="#" class="navigation__link">About</a>
+                            <a href="./index.html" class="navigation__link navigation__link--activ">About</a>
                         </li>
                         <li class="navigation__item">
                             <a href="#" class="navigation__link">Map</a>
@@ -27,7 +29,7 @@
                             <a href="#" class="navigation__link">Zoos</a>
                         </li>
                         <li class="navigation__item">
-                            <a href="#" class="navigation__link">Donate</a>
+                            <a href="../donate/index.html" class="navigation__link">Donate</a>
                         </li>
                         <li class="navigation__item">
                             <a href="#" class="navigation__link">Contact us</a>
@@ -35,7 +37,9 @@
                     </ul>
                 </nav>
                 <div class="designed">
-                    <span class="designed__text">Designed by ©</span>
+                    <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">
+                        <span class="designed__text">Designed by ©</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -96,7 +100,7 @@
                                 <div class="slide__box">
                                     <img class="slide__box-img" src="../../assets/images/slider/panda 1.jpg" alt="panda">
                                 </div>
-                                <div class="slide__content bamboo banan meat fish">
+                                <div class="slide__content fruit">
                                     <h5 class="title slide__title">giant Pandas</h5>
                                     <p class="subtitle">Native to Southwest China</p>
                                 </div>
@@ -105,7 +109,7 @@
                                 <div class="slide__box">
                                     <img class="slide__box-img" src="../../assets/images/slider/eagles 2.svg" alt="Eagles">
                                 </div>
-                                <div class="slide__content">
+                                <div class="slide__content meat">
                                     <h5 class="title slide__title">Eagles</h5>
                                     <p class="subtitle">Native to South America</p>
                                 </div>
@@ -114,7 +118,7 @@
                                 <div class="slide__box">
                                     <img class="slide__box-img" src="../../assets/images/slider/corilla 3.jpg" alt="Gorillas">
                                 </div>
-                                <div class="slide__content">
+                                <div class="slide__content fruit">
                                     <h5 class="title slide__title">Gorillas</h5>
                                     <p class="subtitle">Native to Congo</p>
                                 </div>
@@ -123,7 +127,7 @@
                                 <div class="slide__box">
                                     <img class="slide__box-img" src="../../assets/images/slider/sloth 4.svg" alt="Sloth">
                                 </div>
-                                <div class="slide__content">
+                                <div class="slide__content fruit">
                                     <h5 class="title slide__title">Two-toed Sloth</h5>
                                     <p class="subtitle">Mesoamerica, South America</p>
                                 </div>
@@ -132,7 +136,7 @@
                                 <div class="slide__box">
                                     <img class="slide__box-img" src="../../assets/images/slider/cheetahs 5.jpg" alt="cheetahs">
                                 </div>
-                                <div class="slide__content">
+                                <div class="slide__content meat">
                                     <h5 class="title slide__title">cheetahs</h5>
                                     <p class="subtitle">Native to Africa</p>
                                 </div>
@@ -141,7 +145,7 @@
                                 <div class="slide__box">
                                     <img class="slide__box-img" src="../../assets/images/slider/penguins.jpg" alt="Penguins">
                                 </div>
-                                <div class="slide__content">
+                                <div class="slide__content meat">
                                     <h5 class="title slide__title">Penguins</h5>
                                     <p class="subtitle">Native to Antarctica</p>
                                 </div>
@@ -172,7 +176,10 @@
                     <h2 class="pick__title title">Pick and feed a friend</h2>
                     <p class="pick__subtitle">We know the animals bring you joy, and in these extraordinary times, we’re glad.</p>
                     <p class="pick__text">During a time when the COVID-19 epidemic is touching all of our lives, we’re proud and glad that people around the world find joy in PetStory.</p>
-                    <p class="pick__text pick__text--weight">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider <br> a gift to our Emergency Support Fund . </p>
+                    <p class="pick__text pick__text--weight">Even though the zoo has reopened, we need you now more than ever to help us deal with these problems. Please consider <br> a gift to our 
+                    <a class="pick__text-link" href="../donate/index.html">
+                        Emergency Support Fund</a>
+                     . </p>
                     <div class="works">
                         <h3 class="title works__title">How it works</h3>
                         <div class="works__wrap">
@@ -306,32 +313,40 @@
             <div class="footer__inner">
                 <div class="footer__box">
                     <div class="logo">
-                        <h1 class="title logo__title">PetStory <br> online</h1>
+                        <a href="../donate/index.html">
+                            <h1 class="title logo__title">PetStory <br> online</h1>
+                        </a>
                     </div>
-                    <button class="btn footer__btn">donate for volunteers</button>
+                    <form action="../donate/index.html">
+                        <button class="btn footer__btn">donate for volunteers</button>
+                    </form>
                     <ul class="footer__list-contact">
                         <li class="footer__item-contact">
-                            <i class="fa-brands fa-facebook-f"></i>
-                            <a href="#" class="footer__contact-link">Facebook</a>
+                            <a href="https://www.facebook.com/" class="footer__contact-link">
+                                <i class="fa-brands fa-facebook-f"></i> Facebook
+                            </a>
                         </li>
                         <li class="footer__item-contact">
-                            <i class="fa-brands fa-twitter"></i>
-                            <a href="#" class="footer__contact-link">Twitter</a>
+                            <a href="https://twitter.com/?lang=ru" class="footer__contact-link">
+                                <i class="fa-brands fa-twitter"></i> Twitter
+                            </a>
                         </li>
                         <li class="footer__item-contact">
-                            <i class="fa-brands fa-instagram"></i>
-                            <a href="#" class="footer__contact-link">Instagram</a>
+                            <a href="https://www.instagram.com/" class="footer__contact-link">
+                                <i class="fa-brands fa-instagram"></i> Instagram
+                            </a>
                         </li>
                         <li class="footer__item-contact">
-                            <i class="fa-brands fa-youtube"></i>
-                            <a href="#" class="footer__contact-link">YouTube</a>
+                            <a href="https://www.youtube.com/" class="footer__contact-link">
+                                <i class="fa-brands fa-youtube"></i> YouTube
+                            </a>
                         </li>
                     </ul>
                 </div>
                 <div class="footer__box">
                     <ul class="navigation__list">
                         <li class="navigation__item">
-                            <a href="#" class="navigation__link">About</a>
+                            <a href="#" class="navigation__link navigation__link--activ">About</a>
                         </li>
                         <li class="navigation__item">
                             <a href="#" class="navigation__link">Map</a>
@@ -366,5 +381,6 @@
         </div>
     </footer>
     <script src="https://kit.fontawesome.com/78c2d78b1c.js" crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 </html>
