feat: gradient border

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -363,7 +363,9 @@
                     <div class="wrap">
                         <h3 class="title footer__title">Subscribe to our news</h3>
                         <div class="footer__enter">
-                            <input class="footer__input" type="email" placeholder="Enter your email">
+                            <label for="input">
+                                <input id="input" class="footer__input" type="email" placeholder="Enter your email">
+                            </label>
                             <button class="footer__enter-btn">Submit</button>
                         </div>
                     </div>
