feat: style and html pages/donate

--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -4,9 +4,181 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../pages/main/normalize.css">
+    <link rel="stylesheet" href="../main/sass/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <div class="header__inner">
+                <div class="logo">
+                    <a href="./index.html">
+                        <h1 class="title logo__title">PetStory <br> online</h1>
+                    </a>
+                </div>
+                <nav class="navigation">
+                    <ul class="navigation__list">
+                        <li class="navigation__item">
+                            <a href="../main/index.html" class="navigation__link navigation__link--activ">About</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Map</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Zoos</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="../donate/index.html" class="navigation__link">Donate</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Contact us</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="designed">
+                    <a href="https://www.figma.com/file/jfEFwkXVj1WRq7sUHDr8os/PetStory-online">
+                        <span class="designed__text">Designed by ©</span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="watch">
+            <div class="container">
+                <div class="watch__inner">
+                    <!-- <div class="watch__box">
+                        <h2 class=" title watch__title">Watch <br> your <br>
+                            <span class="watch__title--orange">favorite</span> <br> 
+                            animal <br> online
+                        </h2>    
+                    </div>
+                    <button class="btn watch__btn">wath online</button> -->
+                </div>
+            </div>
+        </section>
+        <section class="pick">
+            <div class="container">
+                <div class="pick__inner">
+                    <div class="donate__wrap">
+                        <h2 class="donate__title">THE ZOO HAS OFFICIALLY REOPENED BUT WE STILL NEED YOUR HELP!</h2>
+                        <p class="donate__text">
+                            Even though the Zoo has been able to reopen, we are at a greatly reduced capacity with educational programs and public and private events cancelled or postponed for additional months. We need you now more than ever to help ensure that we overcome these challenges. We have been actively raising funds in the community, and we are grateful for the generosity.  But much more support is still needed, and we need your help! Please consider a gift today – no matter what size – to help us sustain our mission.
+                        </p>
+                        <h2 class="donate__title donate__title--active">
+                            Donation Information
+                        </h2>
+                    </div>
+                    <div class="donate__wrap">
+                        <h2 class="pick__title title">
+                            Pick and feed a friend
+                        </h2>
+                        <p class="pick__subtitle">
+                            We know the animals bring you joy, and in these extraordinary times, we’re glad.
+                        </p>
+                        <div class="donate__container">
+                            <div class="column__wrap">
+                                <p class="column__wrap-text column__wrap-text--font">
+                                    4
+                                </p>
+                                <p class="column__wrap-text">
+                                    Panda diet for the day.
+                                </p>
+                            </div>
+                            <div class="column__krest">
+                                <img class="column__krest-img" src="../../assets/images/donate/X_svg.svg" alt="krest">
+                            </div>
+                            <div class="column__panda">
+                                <img src="../../assets/images/donate/panda__vector.svg" alt="panda">
+                            </div>
+                        </div>
+                        <div class="pick__btn-container">
+                            <button class="btn pick__btn">
+                                Feed a friend now
+                            </button>
+                        </div>
+                    </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__inner">
+                <div class="footer__box">
+                    <div class="logo">
+                        <a href="../donate/index.html">
+                            <h1 class="title logo__title">PetStory <br> online</h1>
+                        </a>
+                    </div>
+                    <form action="../donate/index.html">
+                        <button class="btn footer__btn">donate for volunteers</button>
+                    </form>
+                    <ul class="footer__list-contact">
+                        <li class="footer__item-contact">
+                            <a href="https://www.facebook.com/" class="footer__contact-link">
+                                <i class="fa-brands fa-facebook-f"></i> Facebook
+                            </a>
+                        </li>
+                        <li class="footer__item-contact">
+                            <a href="https://twitter.com/?lang=ru" class="footer__contact-link">
+                                <i class="fa-brands fa-twitter"></i> Twitter
+                            </a>
+                        </li>
+                        <li class="footer__item-contact">
+                            <a href="https://www.instagram.com/" class="footer__contact-link">
+                                <i class="fa-brands fa-instagram"></i> Instagram
+                            </a>
+                        </li>
+                        <li class="footer__item-contact">
+                            <a href="https://www.youtube.com/" class="footer__contact-link">
+                                <i class="fa-brands fa-youtube"></i> YouTube
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__box">
+                    <ul class="navigation__list">
+                        <li class="navigation__item">
+                            <a href="../main/index.html" class="navigation__link navigation__link--activ">About</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Map</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Zoos</a>
+                        </li>
+                        <li class="navigation__item">
+                            <a href="#" class="navigation__link">Contact us</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="footer__box">
+                    <div class="wrap">
+                        <h3 class="title footer__title">Subscribe to our news</h3>
+                        <div class="footer__enter">
+                            <label for="input">
+                                <input id="input" class="footer__input" type="email" placeholder="Enter your email">
+                            </label>
+                            <button class="footer__enter-btn">Submit</button>
+                        </div>
+                    </div>
+                    <div class="footer__dev-link">
+                        <p class="footer__text-avtor">
+                            Designed by Alisa Samborskaya
+                        </p>
+                        <p class="footer__text-avtor">
+                            ©RSSchool & ©Yem Digital 2021
+                        </p>
+                    </div>
+                </div>
+               
+            </div>
+        </div>
+    </footer>
+    <script src="https://kit.fontawesome.com/78c2d78b1c.js" crossorigin="anonymous"></script>
 </body>
 </html>
