feat: add input in  pages donate

--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -14,7 +14,7 @@
         <div class="container">
             <div class="header__inner">
                 <div class="logo">
-                    <a href="./index.html">
+                    <a href="../main/index.html">
                         <h1 class="title logo__title">PetStory <br> online</h1>
                     </a>
                 </div>
@@ -49,13 +49,6 @@
         <section class="watch">
             <div class="container">
                 <div class="watch__inner">
-                    <!-- <div class="watch__box">
-                        <h2 class=" title watch__title">Watch <br> your <br>
-                            <span class="watch__title--orange">favorite</span> <br> 
-                            animal <br> online
-                        </h2>    
-                    </div>
-                    <button class="btn watch__btn">wath online</button> -->
                 </div>
             </div>
         </section>
@@ -94,6 +87,47 @@
                                 <img src="../../assets/images/donate/panda__vector.svg" alt="panda">
                             </div>
                         </div>
+                        <div class="donate__line">
+                            <p class="line__text">Amount</p>
+                            <div class="progress-bar">
+                                <ul class="elipse__list">
+                                    <li class="elipse__item">
+                                        <span class="elipse__circle elipse__circle--margin"></span>
+                                    </li>
+                                    <li class="elipse__item">
+                                        <span class="elipse__circle"></span>
+                                    </li>
+                                    <li class="elipse__item">
+                                        <span class="elipse__circle"></span>
+                                    </li>
+                                    <li class="elipse__item">
+                                        <span class="elipse__circle"></span>
+                                    </li>
+                                    <li class="elipse__item">
+                                        <span class="elipse__circle"></span>
+                                    </li>
+                                    <li class="elipse__item">
+                                        <span class="elipse__circle"></span>
+                                    </li>
+                                    <li class="elipse__item">
+                                        <span class="elipse__circle"></span>
+                                    </li>
+                                    <li class="elipse__item">
+                                        <span class="elipse__circle"></span>
+                                    </li>
+                                </ul>
+                                <div class="another">
+                                    <form class="another__amount-container" action="">
+                                        <input class="another__amount" type="number" placeholder="Another amount">
+                                    </form>
+                                    <form class="input__list-container" action="">
+                                        <input class="input__list" type="radio"> <span class="input__list-text">Monthly</span>
+                                        <input class="input__list" type="radio"> <span class="input__list-text">Once</span>
+                                    </form>
+                                </div>
+                                
+                            </div>
+                        </div>
                         <div class="pick__btn-container">
                             <button class="btn pick__btn">
                                 Feed a friend now
@@ -110,11 +144,11 @@
             <div class="footer__inner">
                 <div class="footer__box">
                     <div class="logo">
-                        <a href="../donate/index.html">
+                        <a href="../main/index.html">
                             <h1 class="title logo__title">PetStory <br> online</h1>
                         </a>
                     </div>
-                    <form action="../donate/index.html">
+                    <form action="../main/index.html">
                         <button class="btn footer__btn">donate for volunteers</button>
                     </form>
                     <ul class="footer__list-contact">
