fex: header style interactiv about

--- a/online-zoo/pages/donate/index.html
+++ b/online-zoo/pages/donate/index.html
@@ -21,7 +21,7 @@
                 <nav class="navigation">
                     <ul class="navigation__list">
                         <li class="navigation__item">
-                            <a href="../main/index.html" class="navigation__link navigation__link--activ">About</a>
+                            <a href="../main/index.html" class="navigation__link">About</a>
                         </li>
                         <li class="navigation__item">
                             <a href="#" class="navigation__link">Map</a>
@@ -30,7 +30,7 @@
                             <a href="#" class="navigation__link">Zoos</a>
                         </li>
                         <li class="navigation__item">
-                            <a href="../donate/index.html" class="navigation__link">Donate</a>
+                            <a href="../donate/index.html" class="navigation__link navigation__link--activ">Donate</a>
                         </li>
                         <li class="navigation__item">
                             <a href="#" class="navigation__link">Contact us</a>
@@ -177,7 +177,7 @@
                 <div class="footer__box">
                     <ul class="navigation__list">
                         <li class="navigation__item">
-                            <a href="../main/index.html" class="navigation__link navigation__link--activ">About</a>
+                            <a href="../main/index.html" class="navigation__link">About</a>
                         </li>
                         <li class="navigation__item">
                             <a href="#" class="navigation__link">Map</a>
