fix: add style pages/landing About

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -313,8 +313,8 @@
             <div class="footer__inner">
                 <div class="footer__box">
                     <div class="logo">
-                        <a href="../donate/index.html">
-                            <h1 class="title logo__title">PetStory <br> online</h1>
+                        <a href="./index.html">
+                            <h2 class="title logo__title">PetStory <br> online</h2>
                         </a>
                     </div>
                     <form action="../donate/index.html">
