feat: add responsive 640px

--- a/online-zoo/pages/main/index.html
+++ b/online-zoo/pages/main/index.html
@@ -76,7 +76,7 @@
                             <div class="backstage__content">
                                 <h3 class="backstage__title backstage__title--margin title">How it works </h3>
                                 <p class="backstage__text backstage__text--font">
-                                    he main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.
+                                    The main goal is to help the animals, as well as the nature reserves and zoos where they are kept. We are currently working on video projects targeting pandas in China, eagles on an island near Los Angeles, alligators in Florida and gorillas in the Congo. These have a total of more than 1,500 mammals and reptiles.
                                 </p>
                             </div>
                         </div>
@@ -165,12 +165,14 @@
                     </div>
                 </div>
                 <picture class="slider__wrap-flower">
+                    <source media="(max-width: 640px)" srcset="../../assets/images/media__img/640px/palm_foto.png">
                     <source media="(max-width: 1599px)" srcset="../../assets/images/media__img/palm_foto.png">
                     <img class="slider__flower" src="../../assets/images/palm_foto.jpg" alt="flower">
                     <!-- <div class="slider__wrap-flower">
                     </div> -->
                 </picture>
                 <picture class="slider__wrap-flower slider__wrap-flower--right">
+                    <source media="(max-width: 640px)" srcset="../../assets/images/media__img/640px/strelitzia.png">
                     <source media="(max-width: 1599px)" srcset="../../assets/images/media__img/strelitzia_1.png">
                     <img class="slider__flower" src="../../assets/images/strelitzia 1.jpg" alt="flower">
                 </picture>
@@ -311,9 +313,10 @@
                 </div>
                 <button class="btn testimonials__btn">leave feedback</button>
             </div>
-            <div class="leav__container">
+            <picture class="leav__container">
+                <source media="(max-width: 640px)" srcset="../../assets/images/media__img/640px/leav_foto.png">
                 <img class="leav__foto" src="../../assets/images/leav_foto.png" alt="flower">
-            </div>
+            </picture>
         </section>
     </main>
     <footer class="footer">
